--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=10.255.241.160
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=appLaravel
+DB_USERNAME=forge
+DB_PASSWORD=C0nt4ctC3nt3R
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
