Cambios en la interfaz grafica (Modales)

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2RzuIdOolvjaWUMTiYm6s7XN/przy/ZgH9QsxRL/HsA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=10.255.241.160
+DB_HOST=10.255.244.114
 DB_PORT=3306
 DB_DATABASE=appLaravel
-DB_USERNAME=forge
-DB_PASSWORD=C0nt4ctC3nt3R
+DB_USERNAME=miguel.chavez
+DB_PASSWORD=N1mBu52019_?
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
