--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "jeremykenedy/laravel-roles": "^1.7",
         "jeroennoten/laravel-adminlte": "^1.25",
         "laravel/framework": "5.8.*",
+        "laravel/telescope": "^2.0",
         "laravel/tinker": "^1.0",
+        "monolog/monolog": "^1.24",
         "nwidart/laravel-modules": "^5.0",
         "spatie/laravel-permission": "^2.37"
     },
