--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/administrador.js": "/js/administrador.js",
+    "/js/inbound.js": "/js/inbound.js",
     "/js/settings.js": "/js/settings.js"
 }
