--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "monolog/monolog": "^1.24",
         "nwidart/laravel-modules": "^5.0",
+        "ofbeaton/phpami": "^1.1",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
