--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "laravel/framework": "5.8.*",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
+        "maddhatter/laravel-fullcalendar": "^1.3",
         "monolog/monolog": "^1.24",
         "nesbot/carbon": "^2.24",
         "nwidart/laravel-modules": "^5.0",
         "ofbeaton/phpami": "^1.1",
+        "predis/predis": "^1.1",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
