--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/administrador.js": "/js/administrador.js",
+    "/js/agente.js": "/js/agente.js",
     "/js/inbound.js": "/js/inbound.js",
     "/js/settings.js": "/js/settings.js"
 }
