--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "nwidart/laravel-modules": "^5.0",
         "ofbeaton/phpami": "^1.1",
         "predis/predis": "^1.1",
+        "ritey/nusoap": "^0.9.5",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
