--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "econea/nusoap": "^0.9.7",
         "fideloper/proxy": "^4.0",
         "jeremykenedy/laravel-roles": "^1.7",
         "jeroennoten/laravel-adminlte": "^1.25",
@@ -21,7 +22,6 @@
         "nwidart/laravel-modules": "^5.0",
         "ofbeaton/phpami": "^1.1",
         "predis/predis": "^1.1",
-        "ritey/nusoap": "^0.9.5",
         "spatie/laravel-permission": "^2.37"
     },
     "require-dev": {
