--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/administrador.js": "/js/administrador.js",
     "/js/agente.js": "/js/agente.js",
     "/js/inbound.js": "/js/inbound.js",
+    "/js/recording.js": "/js/recording.js",
     "/js/settings.js": "/js/settings.js"
 }
