--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "chumper/zipper": "^1.0",
         "econea/nusoap": "^0.9.7",
         "fideloper/proxy": "^4.0",
         "jeremykenedy/laravel-roles": "^1.7",
@@ -16,6 +17,7 @@
         "laravel/framework": "5.8.*",
         "laravel/telescope": "^2.1",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "maddhatter/laravel-fullcalendar": "^1.3",
         "monolog/monolog": "^1.24",
         "nesbot/carbon": "^2.24",
