--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,12 @@
         "nwidart/laravel-modules": "^5.0",
         "ofbeaton/phpami": "^1.1",
         "predis/predis": "^1.1",
-        "spatie/laravel-permission": "^2.37"
+        "spatie/laravel-permission": "^2.37",
+        "fzaninotto/faker": "^1.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
