--- a/package.json
+++ b/package.json
@@ -11,24 +11,25 @@
     },
     "devDependencies": {
         "axios": "^0.18.1",
-        "bootstrap": "^4.1.0",
+        "bootstrap": "^4.4.1",
         "cross-env": "^5.2.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.15",
-        "popper.js": "^1.16.0",
+        "popper.js": "^1.16.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.23.3",
+        "sass": "^1.26.3",
         "sass-loader": "^7.3.1",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10"
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "express": "^4.17.1",
-        "ioredis": "^4.14.1",
+        "ioredis": "^4.16.0",
         "laravel-echo": "^1.6.1",
-        "laravel-echo-server": "^1.6.0",
+        "laravel-echo-server": "^1.6.1",
         "socket.io": "^2.3.0",
-        "socket.io-client": "^2.3.0"
+        "socket.io-client": "^2.3.0",
+        "webpack": "^4.42.0"
     }
 }
