--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,7 @@
     "/js/administrador.js": "/js/administrador.js",
     "/js/agente.js": "/js/agente.js",
     "/js/agente_monitoreo.js": "/js/agente_monitoreo.js",
+    "/js/checkSesion.js": "/js/checkSesion.js",
     "/js/inbound.js": "/js/inbound.js",
     "/js/monitor.js": "/js/monitor.js",
     "/js/recording.js": "/js/recording.js",
