--- a/.env.example
+++ b/.env.example
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=10.255.244.27
+DB_HOST=10.255.238.226
 DB_PORT=3306
 DB_DATABASE=appLaravel
-DB_USERNAME=miguel.chavez
-DB_PASSWORD=N1mBu52019_?
+DB_USERNAME=Contact_Center
+DB_PASSWORD='%C0nt4ctC3nt3R#'
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
