--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2",
+        "php": "^7.3",
         "econea/nusoap": "^0.9.7",
+        "facade/ignition": "^2.3.6",
         "fideloper/proxy": "^4.0",
         "fzaninotto/faker": "^1.4",
         "jeroennoten/laravel-adminlte": "^3.4",
-        "laravel/framework": "^7.0",
-        "laravel/telescope": "^3.5",
+        "laravel/framework": "^8.0",
+        "laravel/legacy-factories": "^1.0",
+        "laravel/telescope": "^4.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "maatwebsite/excel": "^3.1",
@@ -24,10 +26,9 @@
         "spatie/laravel-permission": "^3.11"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^4.1",
+        "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^8.5"
     },
     "config": {
