--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/administrador.js": "/js/administrador.js",
+    "/js/agente.js": "/js/agente.js",
     "/js/checkSesion.js": "/js/checkSesion.js",
     "/js/inbound.js": "/js/inbound.js",
     "/js/menu_principal.js": "/js/menu_principal.js",
