correcciones en recording inbound

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,6 @@
     "/js/checkSesion.js": "/js/checkSesion.js",
     "/js/inbound.js": "/js/inbound.js",
     "/js/menu_principal.js": "/js/menu_principal.js",
+    "/js/recording.js": "/js/recording.js",
     "/js/settings.js": "/js/settings.js"
 }
