--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,6 +4,7 @@
     "/js/checkSesion.js": "/js/checkSesion.js",
     "/js/inbound.js": "/js/inbound.js",
     "/js/menu_principal.js": "/js/menu_principal.js",
+    "/js/outbound.js": "/js/outbound.js",
     "/js/recording.js": "/js/recording.js",
     "/js/settings.js": "/js/settings.js"
 }
